Implemented barebones frontend and configured webpack

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    hey
+    yes
   </head>
   <body>
-    yo
+    <div id="app">
+      testing
+    </div>
+    <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
